added the linkedin profile

--- a/hours.html
+++ b/hours.html
@@ -56,6 +56,40 @@
         </dl>
       </article>
     </main>
+
+    <section class="socials">
+      <div class="social__info">
+        <h4>Little Taco Shop</h4>
+        <p>love of tacos 🌮🌮🌮</p>
+      </div>
+      <div class="social__icons">
+        <ul>
+          <li>
+            <a href="#" title="facebook"
+              ><img src="./img/facebook-f.svg" alt="facebook-img"
+            /></a>
+          </li>
+          <li>
+            <a href="#" title="instagram"
+              ><img src="./img/instagram.svg" alt="insta-img"
+            /></a>
+          </li>
+          <li>
+            <a href="#" title="twitter"
+              ><img src="./img/twitter-alt.svg" alt="twitter-img"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/rahulsaxena99/"
+              title="linkedin"
+              ><img src="./img/linkedin.svg" alt="linkedin-img"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <footer class="footer">
       <p>
         <span class="nowrap">Copyright &copy;<time id="year"></time></span>
