--- a/contact.html
+++ b/contact.html
@@ -51,8 +51,8 @@
       <article class="main__article contact-p">
         <h2>Our Location</h2>
         <address>
-          555 Taco Temptation Lane, Suite T<br />
-          Kansas City, MO 55555-5555
+          India<br />
+          MO 55555-5555
           <br /><br />
           Phone: <a href="tel:+5555555555">555-555-5555</a>
         </address>
@@ -109,6 +109,40 @@
         </form>
       </article>
     </main>
+
+    <section class="socials">
+      <div class="social__info">
+        <h4>Little Taco Shop</h4>
+        <p>love of tacos 🌮🌮🌮</p>
+      </div>
+      <div class="social__icons">
+        <ul>
+          <li>
+            <a href="#" title="facebook"
+              ><img src="./img/facebook-f.svg" alt="facebook-img"
+            /></a>
+          </li>
+          <li>
+            <a href="#" title="instagram"
+              ><img src="./img/instagram.svg" alt="insta-img"
+            /></a>
+          </li>
+          <li>
+            <a href="#" title="twitter"
+              ><img src="./img/twitter-alt.svg" alt="twitter-img"
+            /></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/rahulsaxena99/"
+              title="linkedin"
+              ><img src="./img/linkedin.svg" alt="linkedin-img"
+            /></a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <footer class="footer">
       <p>
         <span class="nowrap">Copyright &copy;<time id="year"></time></span>
