--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,8 @@
         <h2>Our Location</h2>
         <address>
           India<br />
-          MO 55555-5555
+          MO 55555-5555 <br />
+          email- rahulsaxena2023@hotmail.com
           <br /><br />
           Phone: <a href="tel:+5555555555">555-555-5555</a>
         </address>
